Fixed alignment on social icons for profiles

--- a/prod/scss/partials/_footer-global.scss
+++ b/prod/scss/partials/_footer-global.scss
@@ -103,6 +103,11 @@
   }
 }
 
+.footer-info__social--profile {
+  display: inline-block;
+  width: inherit;
+}
+
 .footer-info__social--footer {
   @media screen and (min-width: 700px) {
     clear: left;
