--- a/prod/scss/partials/_profile.scss
+++ b/prod/scss/partials/_profile.scss
@@ -354,6 +354,6 @@
 
 .people .footer-info__social {
 	@media screen and (min-width: 700px) {
-		margin: 2em 0 2em -.75em;
+		margin: 2em 0 2em -.15em;
 	}
 }
